<resources>
    <string name="app_name">steam</string>
    <string name="forget_password_underline"><u>Mot de passe oublié</u></string>
    <string name="forget_password">Mot de passe oublié</string>
    <string name="welcome_title">Bienvenue !</string>
    <string name="welcome_description">Veuillez vous connecter ou créer un nouveau compte pour utiliser l’application.</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="sign_in">Se connecter</string>
    <string name="sign_up">Créer un nouveau compte</string>
    <string name="sign_up_title">Inscription</string>
    <string name="sign_up_description">Veuillez saisir ces différentes informations, afin que vos listes soient sauvegardées</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password_verification">Vérification du mot de passe</string>
    <string name="sign_up_button">S\'inscrire</string>
    <string name="already_have_account">Je possède déjà un compte</string>
    <string name="forget_password_description">Veuillez saisir votre email et votre nouveau mot de passe</string>
    <string name="change_password">Changer mon mot de passe</string>
    <string name="return_to_sign_in">Retourner sur l\'écran de connexion</string>
    <string name="home">Accueil</string>
    <string name="search_game">Rechercher un jeu…</string>
    <string name="more_about">En savoir plus</string>
    <string name="best_sales"><u>Les meilleures ventes</u></string>
    <string name="game_name">Nom du jeu</string>
    <string name="game_description">Description du jeu</string>
    <string name="editor_name">Nom de l\'éditeur</string>
    <string name="game_price">Prix: 10,00 €</string>
    <string name="no_like_title">Votre liste de like est vide !</string>
    <string name="no_like_description">Cliquez sur le coeur lorsque vous consultez un jeu pour l\'ajouter à vos j\'aime.</string>
    <string name="no_wish_title">Votre liste de souhait est vide !</string>
    <string name="no_wish_description">Cliquez sur l\'étoile lorsque vous consultez un jeu pour l\'ajouter à vos souhaits.</string>
    <string name="search_nb_result"><u>Nombre de résultats : </u></string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia ornare tortor sodales hendrerit. Phasellus enim diam, vestibulum nec augue sed, laoreet maximus orci. Praesent purus neque, lobortis at molestie vitae, blandit et enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur justo risus, sagittis ut mi vitae, luctus bibendum lectus. Nunc porttitor velit sapien, eget interdum dolor interdum et. Donec tortor risus, malesuada quis aliquet eget, facilisis sed ante. Etiam feugiat in nibh eu accumsan.</string>
    <string name="description">Description</string>
    <string name="reviews">Avis</string>
    <string name="title_game_detail">Détail du jeu</string>
    <string name="my_likes">Mes j\'aime</string>
    <string name="search">Recherche</string>
    <string name="wishlist">Ma liste de souhaits</string>
    <string name="number_of_results">"Nombre de résultats : "</string>
    <string name="error_unlike">Le jeu n\'a pas pu être enlevé de votre liste de j\'aime. Veuillez réessayer.</string>
    <string name="error_like">Le jeu n\'a pas pu être ajouté à votre liste de j\'aime. Veuillez réessayer.</string>
    <string name="error_unwish">Le jeu n\'a pas pu être enlevé de votre liste de souhait. Veuillez réessayer.</string>
    <string name="error_wish">Le jeu n\'a pas pu être ajouté à votre liste de souhait. Veuillez réessayer.</string>
    <string name="error_game_detail">Le jeu n\'a pas pu être récupéré correctement. Veuillez réessayer.</string>
    <string name="error_top_games">La liste de jeu n\'a pas pu être récupéré.</string>
    <string name="error_search_games">Les jeux n\'ont pas pu être récupéré correctement. Veuillez réessayer.</string>
    <string name="error_sign_in">Les informations de connexion sont incorrect. Veuillez réessayer.</string>
    <string name="error_sign_up">Cette adresse email est déjà utilisée</string>
    <string name="error_lost_password">Le changement de mot de passe n\'a pas pu être effectué. Veuillez réessayer.</string>
    <string name="success_lost_password">Mot de passe changé avec succès.</string>
    <string name="error_password_verification">Le mot de passe est différent de sa vérification</string>
    <string name="error_email_invalid">L\'adresse email est invalide</string>
    <string name="error_username_empty">Veuillez indiquer votre nom d\'utilisateur</string>
    <string name="error_password_empty">Veuillez indiquer votre mot de passe</string>
</resources>