<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.SignUpActivity">

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:fontFamily="@font/google_sans_bold"
        android:text="@string/sign_up_title"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/sign_up_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_title" />

    <EditText
        android:id="@+id/signup_username_input"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/normal_input"
        android:fontFamily="@font/proxima_nova"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_desc"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/signup_email_input"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/normal_input"
        android:fontFamily="@font/proxima_nova"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_username_input"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/signup_password_input"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/normal_input"
        android:fontFamily="@font/proxima_nova"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_input"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/signup_cpassword_input"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/normal_input"
        android:fontFamily="@font/proxima_nova"
        android:hint="@string/password_verification"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_input"
        android:importantForAutofill="no" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_confirm_btn"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/primary_button"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/sign_up_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_cpassword_input" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_goto_signin_btn"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/outlined_button"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/already_have_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_confirm_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>