<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="true"
    android:backgroundTint="@color/input"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/game_icon_img"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            >

            <TextView
                android:id="@+id/game_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova"
                android:textColor="@color/white"
                android:text="@string/game_name" />

            <TextView
                android:id="@+id/game_publisher_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/editor_name"
                android:fontFamily="@font/proxima_nova"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/game_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/game_price"
                android:fontFamily="@font/proxima_nova"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/game_details_btn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/more_about"
            android:textAllCaps="false"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:fontFamily="@font/proxima_nova"
            android:paddingHorizontal="16dp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>