<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/detail_description_cover_image"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/input" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/detail_description_background_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="-48dp"
        android:backgroundTint="@color/input"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_description_cover_image">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/adapter_game_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/logo" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detail_description_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova"
                    android:text="@string/game_name"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/detail_description_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/proxima_nova"
                    android:text="@string/editor_name"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/detail_description_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/proxima_nova"
                    android:text="@string/game_price"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_description_background_image">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/detail_description_enable"
            android:layout_weight=".5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/primary_button"
            android:fontFamily="@font/google_sans_bold"
            android:paddingHorizontal="24dp"
            android:text="@string/description"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/detail_review_disable"
            android:layout_weight=".5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/outlined_button"
            android:fontFamily="@font/google_sans_bold"
            android:paddingHorizontal="24dp"
            android:text="@string/reviews"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/detail_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/lorem"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>