<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/home_search_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/normal_input"
        android:drawableEnd="@drawable/search"
        android:fontFamily="@font/proxima_nova"
        android:hint="@string/search_game"
        android:inputType="textPersonName"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/home_game_background_image"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_search_input" />

    <TextView
        android:id="@+id/home_game_name_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/game_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/home_game_background_image"
        app:layout_constraintStart_toStartOf="@+id/home_game_details_btn"
        app:layout_constraintTop_toBottomOf="@+id/home_game_mini_image" />

    <TextView
        android:id="@+id/home_game_desc_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:fontFamily="@font/proxima_nova"
        android:maxLines="2"
        android:text="@string/game_description"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/home_game_name_label"
        app:layout_constraintStart_toStartOf="@+id/home_game_details_btn"
        app:layout_constraintTop_toBottomOf="@+id/home_game_name_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/home_game_details_btn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/primary_button"
        android:fontFamily="@font/proxima_nova"
        android:paddingHorizontal="24dp"
        android:text="@string/more_about"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/home_game_background_image"
        app:layout_constraintStart_toStartOf="@+id/home_search_input" />

    <TextView
        android:id="@+id/home_topsales_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/best_sales"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/home_game_details_btn"
        app:layout_constraintTop_toBottomOf="@+id/home_game_background_image" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_topsales_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_topsales_title" />

    <ImageView
        android:id="@+id/home_game_mini_image"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_game_background_image"
        app:srcCompat="@drawable/normal_input" />

</androidx.constraintlayout.widget.ConstraintLayout>